roaring_dart/lib/generated_bindings.dart


  bool bitset_inplace_symmetric_difference(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_inplace_symmetric_difference(
      b1,
      b2,
    );
  }

  late final _bitset_inplace_symmetric_differencePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_inplace_symmetric_difference');
  late final _bitset_inplace_symmetric_difference =
      _bitset_inplace_symmetric_differencePtr.asFunction<
          bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  int bitset_symmetric_difference_count(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_symmetric_difference_count(
      b1,
      b2,
    );
  }

  late final _bitset_symmetric_difference_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_symmetric_difference_count');
  late final _bitset_symmetric_difference_count =
      _bitset_symmetric_difference_countPtr.asFunction<
          int Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  bool bitset_next_set_bit(
    ffi.Pointer<bitset_t> bitset,
    ffi.Pointer<ffi.Size> i,
  ) {
    return _bitset_next_set_bit(
      bitset,
      i,
    );
  }

  late final _bitset_next_set_bitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<ffi.Size>)>>('bitset_next_set_bit');
  late final _bitset_next_set_bit = _bitset_next_set_bitPtr.asFunction<
      bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<ffi.Size>)>();

  int bitset_next_set_bits(
    ffi.Pointer<bitset_t> bitset,
    ffi.Pointer<ffi.Size> buffer,
    int capacity,
    ffi.Pointer<ffi.Size> startfrom,
  ) {
    return _bitset_next_set_bits(
      bitset,
      buffer,
      capacity,
      startfrom,
    );
  }

  late final _bitset_next_set_bitsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<bitset_t>, ffi.Pointer<ffi.Size>,
              ffi.Size, ffi.Pointer<ffi.Size>)>>('bitset_next_set_bits');
  late final _bitset_next_set_bits = _bitset_next_set_bitsPtr.asFunction<
      int Function(ffi.Pointer<bitset_t>, ffi.Pointer<ffi.Size>, int,
          ffi.Pointer<ffi.Size>)>();

  bool bitset_for_each(
    ffi.Pointer<bitset_t> b,
    bitset_iterator iterator,
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _bitset_for_each(
      b,
      iterator,
      ptr,
    );
  }

  late final _bitset_for_eachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>, bitset_iterator,
              ffi.Pointer<ffi.Void>)>>('bitset_for_each');
  late final _bitset_for_each = _bitset_for_eachPtr.asFunction<
      bool Function(
          ffi.Pointer<bitset_t>, bitset_iterator, ffi.Pointer<ffi.Void>)>();

  void bitset_print(
    ffi.Pointer<bitset_t> b,
  ) {
    return _bitset_print(
      b,
    );
  }

  late final _bitset_printPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<bitset_t>)>>(
          'bitset_print');
  late final _bitset_print =
      _bitset_printPtr.asFunction<void Function(ffi.Pointer<bitset_t>)>();

  /// Dynamically allocates a new bitmap (initially empty).
  /// Returns NULL if the allocation fails.
  /// Capacity is a performance hint for how many "containers" the data will need.
  /// Client is responsible for calling `roaring_bitmap_free()`.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_create_with_capacity(
    int cap,
  ) {
    return _roaring_bitmap_create_with_capacity(
      cap,
    );
  }

  late final _roaring_bitmap_create_with_capacityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Uint32)>>('roaring_bitmap_create_with_capacity');
  late final _roaring_bitmap_create_with_capacity =
      _roaring_bitmap_create_with_capacityPtr
          .asFunction<ffi.Pointer<roaring_bitmap_t> Function(int)>();

  /// Dynamically allocates a new bitmap (initially empty).
  /// Returns NULL if the allocation fails.
  /// Client is responsible for calling `roaring_bitmap_free()`.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_create() {
    return _roaring_bitmap_create();
  }

  late final _roaring_bitmap_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<roaring_bitmap_t> Function()>>(
          'roaring_bitmap_create');
  late final _roaring_bitmap_create = _roaring_bitmap_createPtr
      .asFunction<ffi.Pointer<roaring_bitmap_t> Function()>();

  /// Initialize a roaring bitmap structure in memory controlled by client.
  /// Capacity is a performance hint for how many "containers" the data will need.
  /// Can return false if auxiliary allocations fail when capacity greater than 0.
  bool roaring_bitmap_init_with_capacity(
    ffi.Pointer<roaring_bitmap_t> r,
    int cap,
  ) {
    return _roaring_bitmap_init_with_capacity(
      r,
      cap,
    );
  }

  late final _roaring_bitmap_init_with_capacityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_init_with_capacity');
  late final _roaring_bitmap_init_with_capacity =
      _roaring_bitmap_init_with_capacityPtr
          .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Initialize a roaring bitmap structure in memory controlled by client.
  /// The bitmap will be in a "clear" state, with no auxiliary allocations.
  /// Since this performs no allocations, the function will not fail.
  void roaring_bitmap_init_cleared(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_init_cleared(
      r,
    );
  }

  late final _roaring_bitmap_init_clearedPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_init_cleared');
  late final _roaring_bitmap_init_cleared = _roaring_bitmap_init_clearedPtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Add all the values between min (included) and max (excluded) that are at a
  /// distance k*step from min.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_from_range(
    int min,
    int max,
    int step,
  ) {
    return _roaring_bitmap_from_range(
      min,
      max,
      step,
    );
  }

  late final _roaring_bitmap_from_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Uint64, ffi.Uint64,
              ffi.Uint32)>>('roaring_bitmap_from_range');
  late final _roaring_bitmap_from_range = _roaring_bitmap_from_rangePtr
      .asFunction<ffi.Pointer<roaring_bitmap_t> Function(int, int, int)>();

  /// Creates a new bitmap from a pointer of uint32_t integers
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_of_ptr(
    int n_args,
    ffi.Pointer<ffi.Uint32> vals,
  ) {
    return _roaring_bitmap_of_ptr(
      n_args,
      vals,
    );
  }

  late final _roaring_bitmap_of_ptrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Size, ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_of_ptr');
  late final _roaring_bitmap_of_ptr = _roaring_bitmap_of_ptrPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(int, ffi.Pointer<ffi.Uint32>)>();

  bool roaring_bitmap_get_copy_on_write(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_get_copy_on_write(
      r,
    );
  }

  late final _roaring_bitmap_get_copy_on_writePtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_get_copy_on_write');
  late final _roaring_bitmap_get_copy_on_write =
      _roaring_bitmap_get_copy_on_writePtr
          .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>)>();

  void roaring_bitmap_set_copy_on_write(
    ffi.Pointer<roaring_bitmap_t> r,
    bool cow,
  ) {
    return _roaring_bitmap_set_copy_on_write(
      r,
      cow,
    );
  }

  late final _roaring_bitmap_set_copy_on_writePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Bool)>>('roaring_bitmap_set_copy_on_write');
  late final _roaring_bitmap_set_copy_on_write =
      _roaring_bitmap_set_copy_on_writePtr
          .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, bool)>();

  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_add_offset(
    ffi.Pointer<roaring_bitmap_t> bm,
    int offset,
  ) {
    return _roaring_bitmap_add_offset(
      bm,
      offset,
    );
  }

  late final _roaring_bitmap_add_offsetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Int64)>>('roaring_bitmap_add_offset');
  late final _roaring_bitmap_add_offset =
      _roaring_bitmap_add_offsetPtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Describe the inner structure of the bitmap.
  void roaring_bitmap_printf_describe(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_printf_describe(
      r,
    );
  }

  late final _roaring_bitmap_printf_describePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_printf_describe');
  late final _roaring_bitmap_printf_describe =
      _roaring_bitmap_printf_describePtr
          .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Creates a new bitmap from a list of uint32_t integers
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_of(
    int n,
  ) {
    return _roaring_bitmap_of(
      n,
    );
  }

  late final _roaring_bitmap_ofPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<roaring_bitmap_t> Function(ffi.Size)>>(
      'roaring_bitmap_of');
  late final _roaring_bitmap_of = _roaring_bitmap_ofPtr
      .asFunction<ffi.Pointer<roaring_bitmap_t> Function(int)>();

  /// Copies a bitmap (this does memory allocation).
  /// The caller is responsible for memory management.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_copy(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_copy(
      r,
    );
  }

  late final _roaring_bitmap_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_copy');
  late final _roaring_bitmap_copy = _roaring_bitmap_copyPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Copies a bitmap from src to dest. It is assumed that the pointer dest
  /// is to an already allocated bitmap. The content of the dest bitmap is
  /// freed/deleted.
  ///
  /// It might be preferable and simpler to call roaring_bitmap_copy except
  /// that roaring_bitmap_overwrite can save on memory allocations.
  bool roaring_bitmap_overwrite(
    ffi.Pointer<roaring_bitmap_t> dest,
    ffi.Pointer<roaring_bitmap_t> src,
  ) {
    return _roaring_bitmap_overwrite(
      dest,
      src,
    );
  }

  late final _roaring_bitmap_overwritePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_overwrite');
  late final _roaring_bitmap_overwrite =
      _roaring_bitmap_overwritePtr.asFunction<
          bool Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Print the content of the bitmap.
  void roaring_bitmap_printf(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_printf(
      r,
    );
  }

  late final _roaring_bitmap_printfPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_printf');
  late final _roaring_bitmap_printf = _roaring_bitmap_printfPtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();
